Performance improvements
javadoc fixes

Performance improvements